	- Fixed processing of GM/PEX events.
v0.77.1.25:
	- Allow op to override in all permissions.
v0.77.1.26:
	- When loading data files assistants will only be added to the town if they are also a resident (no more errors).
	- Mayors of other towns can no longer perform '/plot set perm reset' in your town.
	- Fixed '/town claim auto'... again.
	- Fixed a NullPointerException in SetDefaultModes task caused by another plugin kicking a player at login.
	- New functions allowing Townychat to observe Essentials mute and ignore functions.
v0.77.1.27:
	- Added a kick function to '/townyadmin town <name> kick []..[]'.
	- Monsters killed in an arena plot no longer drop any loot.
	- refactoring of some code.
	- Minimum version of CraftBukkit updated to 1597.
v0.77.1.28:
	- Fix default Town PVP/FIRE/EXPLOSION/MOB settings.
	- Setting town perms now propogate to any townBlock which have not been manually altered.
	- Setting plot perms will flag that plot as altered so it will not longer update with the towns perms.
	- Performing '/town set perm reset' will propogate all permission changes to town owned plots, and reset any changed flags.
	- Performing '/res set perm reset' will propogate all permission changes to that residents owned plots, and reset any changed flags.
	- Added CraftIRC support to TownyChat.
	
	  Add a channel tag of 'admin' to the
	  receiving channel in the craftIRC config.
	  
	  Disable Auto paths and add the following to the 'paths:' section

	    - source: 'minecraft'
	      target: 'admin'
	      formatting:
	        chat: '%message%'
	      
	    - source: 'admin'     # These are endpoint tags
	      target: 'minecraft'    #
	      formatting:
	        chat: '%foreground%[%red%%ircPrefix%%sender%%foreground%] %message%'
v0.77.1.29:
	- '/Plot claim x' will no longer throw a Not Registered error when it selects plots outside the town.
	- Improve file handle closing to prevent too many open file errors.