@@ -973,3 +973,4 @@ v0.77.1.28:
 v0.77.1.29:
 	- '/Plot claim x' will no longer throw a Not Registered error when it selects plots outside the town.
 	- Improve file handle closing to prevent too many open file errors.
+	- chat modes can now be toggled on and off by repeating the channel command. Eg. '/tc' = on, '/tc' = off.
